--- a/index.html
+++ b/index.html
@@ -6,16 +6,69 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2425</title>
+	<title>Dunkin' Nederland</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
-<body>
-	<h1>Howdy FED2425</h1>
+	<body>
 
-	<script defer src="scripts/script.js"></script>
-</body>
+		<!-- navigatie, weet niet hoe -->
+		<nav>
+		</nav>
+		
+		<!-- De Homepagebutton-->
+		<header>	
+			<h1>Dunkin'</h1>
+			<link rel="stylesheet" href="">
+		</header>
+
+		<main>
+			<!-- SECTION 1: We love coffee foto-->
+			<section>
+				<h2>We love coffee</h2>
+				<img src="" alt=""> <!-- moet ik nog maken-->
+			</section>
+
+			<!-- SECTION 2: Bestel! met twee knoppen -->
+			<section>
+				<h2>Bestel!</h2>
+				<p>Maak een keuze:</p>
+				<p>bestellen</p>
+				<p>afhalen</p>
+			</section>	
+
+			<!-- SECTION 3: NIEUW met plaatje van nieuwe donuts-->			
+			<section>
+				<img src="" alt=""> <!-- moet ik ook nog maken-->
+			</section>
+
+			<!-- SECTION 4: BESTEL DUNKIN' ONLINE -->
+			 <section>
+				<h2>BESTEL DUNKIN' ONLINE</h2>
+				<ol>
+					<li>
+						<h3>1. Vul je postcode in</h3>
+						<p>Zoek jij een store in de buurt? Gebruik de Dunkin' Storefinder.</p>
+					</li>
+					<li>
+						<h3>2. Plaats je bestelling</h3>
+						<p>Kies uit meer dan 200 verschillende donut smaken. Welke kies jij?</p>
+					</li>
+					<li>
+						<h3>3. Ontvang je bestelling</h3>
+					</li>
+				</ol>
+			 </section>
+
+			 <!-- SECTON 5: DD NIEUWS CAROUSEL -->
+			 <section>
+				
+			 </section>
+			</main>
+
+		<script defer src="scripts/script.js"></script>
+	</body>
 	
 </html>
