--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 
 			<!-- SECTION 3: NIEUW met plaatje van nieuwe donuts-->			
 			<section>
-				<img src="" alt=""> <!-- moet ik ook nog maken-->
+				<h2>nieuw</h2>
+				<img src="images/NIEUWFOTO.jpeg" alt="foto van nieuwe donuts"> <!-- moet ik ook nog maken-->
 			</section>
 
 			<!-- SECTION 4: BESTEL DUNKIN' ONLINE -->
@@ -121,11 +122,11 @@
 			
 
 			<section> 
-				<a href="">22 DD IP Holder</a> |
-				<a href="">22 DD IP Holder</a> |
-				<a href="">Privacy Policy </a> |
-				<a href="">Algemene voorwaarden</a> |
-				<a href="">⚡️</a>|
+				<a href="">22 DD IP Holder</a> 
+				<a href="">22 DD IP Holder</a> 
+				<a href="">Privacy Policy </a> 
+				<a href="">Algemene voorwaarden</a>
+				<a href="">⚡️</a>
 			</section>
 		</footer>
 
