--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<title>Dunkin' Nederland</title>
 	
-	<link href="styles/style.css" rel="stylesheet">
+	<link href="styles/style1.0.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/DNKN.svg">
 </head>
 
@@ -35,14 +35,16 @@
 		<nav>
 
 			<button aria-hidden="true">
-				<img src="" alt="">
-				Sluit
+				<img src="images/close_button.png" alt="sluitknop kruisje">
 			</button>
 			<ul>
 				<li><a href="https://www.dunkin.nl/storefinder">Storefinder</a></li>
 				<li><a href="https://werkenbijdunkin.store/">Jobs</a></li>
+				<li><a href="">Blog</a></li>
+				<li><a href="">More</a></li>
+				<!-- <li>	
 					<details>
-						<summary>	<a href="">Blog</a></li> </summary>
+						<summary>	<a href="">More</a></li> </summary>
 						<ul>
 							<li><a href="https://www.dunkin.nl/about">about</a></li>
 							<li><a href="https://www.dunkin.nl/allergenen-en-ingredienten">product info</a></li>
@@ -50,8 +52,13 @@
 							<li><a href="https://www.dunkin.nl/contact">contact</a></li>
 						</ul>
 					</details>
-				</li>
+				</li> -->
 				<li><a href="https://www.dunkin.nl/order-now">Bestellen</a></li>
+			</ul>
+			<ul>
+				<img src="images/tiktoklogo.svg" alt="tiktoklogo">
+				<img src="images/instagramlogo.svg" alt="instagramlogo">
+				<img src="images/facebooklogo.svg" alt="facebooklogo">
 			</ul>
 		</nav>
 
@@ -74,8 +81,8 @@
 
 			<!-- SECTION 3: NIEUW met plaatje van nieuwe donuts-->			
 			<section>
-				<h2>nieuw</h2>
-				<img src="images/NIEUWFOTO.jpeg" alt="foto van nieuwe donuts"> <!-- moet ik ook nog maken-->
+				<h2>nieuw!</h2>
+				<img src="images/nieuwe_donuts.png" alt="foto van nieuwe donuts"> 
 			</section>
 
 			<!-- SECTION 4: BESTEL DUNKIN' ONLINE -->
@@ -94,12 +101,23 @@
 					<li>
 						<h3>Ontvang je bestelling</h3>
 					</li>
+					<button>order-now</button>
 				</ol>
 			 </section>
 
 			 <!-- SECTON 5: DD NIEUWS CAROUSEL -->
 			 <section>
-				
+				<h2>dd nieuws</h2>
+				<article>
+					<p>nieuw</p>
+					<h3>Dunkin' Bataviastad gaat weer open!</h3>
+					<img src="" alt="">
+				</article>
+				<article>
+					<p>vegan</p>
+					<h3>Oproep aan alle vegans out there: <cite lang="en"> Donut worry, we got you covered!</cite></h3>
+					<img src="" alt="">
+				</article>
 			 </section>
 		</main>
 			<!-- DE FOOTER  -->
@@ -115,9 +133,9 @@
 
 			<!-- hier moeten tiktok insta en facebook linkjes in komen -->
 			<aside>
-				<a href=""> <img src="" alt=> </a> </li>
-				<a href=""> <img src="" alt=> </a></li>
-				<a href=""> <img src="" alt=> </a></li>
+				<a href=""> <img src="images/tiktoklogo.svg" alt=> </a> </li>
+				<a href=""> <img src="images/instagramlogo.svg" alt=> </a></li>
+				<a href=""> <img src="images/facebooklogo.svg" alt=> </a></li>
 			</aside>	
 			
 
