--- a/index.html
+++ b/index.html
@@ -88,21 +88,23 @@
 			<!-- SECTION 4: BESTEL DUNKIN' ONLINE -->
 			 <section>
 				<h2>bestel <em>dunkin'</em> online</h2>
-				<ol>
+				<ul>
 					<li>
 						<h3>Vul je postcode in</h3>
-						<img src="." alt="">
+						<img src="images/peace_sign_logo.svg" alt="peace sign logo">
 						<p>Zoek jij een store in de buurt? Gebruik de Dunkin' Storefinder.</p>
 					</li>
 					<li>
 						<h3>Plaats je bestelling</h3>
+						<img src="images/donut_sign_logo.svg" alt="donut logo">
 						<p>Kies uit meer dan 200 verschillende donut smaken. Welke kies jij?</p>
 					</li>
 					<li>
 						<h3>Ontvang je bestelling</h3>
+						<img src="images/bestelling_sign_logo.svg" alt="bestelling logo">
 					</li>
-					<button>order-now</button>
-				</ol>
+					<button>order now</button>
+				</ul>
 			 </section>
 
 			 <!-- SECTON 5: DD NIEUWS CAROUSEL -->
