--- a/index.html
+++ b/index.html
@@ -18,65 +18,66 @@
 		<header>
 			<!-- logo op de pagina-->
 			<h1>Dunkin'</h1>
-			<!-- <link rel="stylesheet" href=""> -->
 			<!-- op tweede pagina -->
 			
 			<button aria-hidden="true">
-				<img src="images/hamburger_icon.svg.png" alt="drie streepjes">
+				<img src="images/hamburger_icon.svg.png" alt="drie streepjesonder elkaar die een hamburger menu moeten voorstellen">
 			</button>
 
 			<!-- menu knop -->
 			<button aria-hidden="true">
 				<img src="images/Language_Dutch.svg" alt="drie streepjes onder elkaar die een hamburger menu moeten voorstellen">
 			</button>
+			
+
+			<!-- NAVIGATIE -->
+			<nav>
+
+				<button aria-hidden="true">
+					<img src="images/close_button.png" alt="sluitknop kruisje">
+				</button>
+				<ul>
+					<li><a href="https://www.dunkin.nl/storefinder">Storefinder</a></li>
+					<li><a href="https://werkenbijdunkin.store/">Jobs</a></li>
+					<li><a href="">Blog</a></li>
+					<li><a href="">More</a></li>
+					<!-- <li>	
+						<details>
+							<summary>	<a href="">More</a></li> </summary>
+							<ul>
+								<li><a href="https://www.dunkin.nl/about">about</a></li>
+								<li><a href="https://www.dunkin.nl/allergenen-en-ingredienten">product info</a></li>
+								<li><a href="https://www.dunkin.nl/faq">faq</a></li>
+								<li><a href="https://www.dunkin.nl/contact">contact</a></li>
+							</ul>
+						</details>
+					</li> -->
+					<li><a href="https://www.dunkin.nl/order-now">Bestellen</a></li>
+					<li>
+					<button aria-hidden="true"><img src="images/tiktoklogo.svg" alt="tiktoklogo"> </button>
+					<button aria-hidden="true"><img src="images/instagramlogo.svg" alt="instagramlogo"></button>
+					<button aria-hidden="true"><img src="images/facebooklogo.svg" alt="facebooklogo"></button>
+					</li>
+				</ul>
+			</nav>
+			<a>bestel nu</a>
 		</header>
 		
-		<!-- NAVIGATIE -->
-		<nav>
-
-			<button aria-hidden="true">
-				<img src="images/close_button.png" alt="sluitknop kruisje">
-			</button>
-			<ul>
-				<li><a href="https://www.dunkin.nl/storefinder">Storefinder</a></li>
-				<li><a href="https://werkenbijdunkin.store/">Jobs</a></li>
-				<li><a href="">Blog</a></li>
-				<li><a href="">More</a></li>
-				<!-- <li>	
-					<details>
-						<summary>	<a href="">More</a></li> </summary>
-						<ul>
-							<li><a href="https://www.dunkin.nl/about">about</a></li>
-							<li><a href="https://www.dunkin.nl/allergenen-en-ingredienten">product info</a></li>
-							<li><a href="https://www.dunkin.nl/faq">faq</a></li>
-							<li><a href="https://www.dunkin.nl/contact">contact</a></li>
-						</ul>
-					</details>
-				</li> -->
-				<li><a href="https://www.dunkin.nl/order-now">Bestellen</a></li>
-			</ul>
-			<ul>
-				<img src="images/tiktoklogo.svg" alt="tiktoklogo">
-				<img src="images/instagramlogo.svg" alt="instagramlogo">
-				<img src="images/facebooklogo.svg" alt="facebooklogo">
-			</ul>
-		</nav>
-
 		<main>
 			<!-- SECTION 1: We love coffee foto-->
 			<section>
 				<h2>We love coffee</h2> <!-- hier kan dus een aria-label in-->
-				<img src="images/coffee_behind.png" alt="">
-				<img src="images/coffee_center.png" alt="">
-				<img src="images/coffee_behind.png" alt="">
+				<img src="images/coffee_behind.png" alt="glas koffie">
+				<img src="images/coffee_center.png" alt="glas koffie">
+				<img src="images/coffee_behind.png" alt="glas koffie">
 			</section>
 
 			<!-- SECTION 2: Bestel! met twee knoppen -->
 			<section>
 				<h2>Bestel!</h2>
 				<p>Maak een keuze:</p>
-				<a href="">Bestellen</a>
-				<a href="">Afhalen</a>
+				<button>Bestellen</button>
+				<button>Afhalen</button>
 			</section>	
 
 			<!-- SECTION 3: NIEUW met plaatje van nieuwe donuts-->			
@@ -103,52 +104,74 @@
 						<h3>Ontvang je bestelling</h3>
 						<img src="images/bestelling_sign_logo.svg" alt="bestelling logo">
 					</li>
-					<button>order now</button>
+					<button>bestel nu</button>
 				</ul>
 			 </section>
 
 			 <!-- SECTON 5: DD NIEUWS CAROUSEL -->
 			 <section>
-				<h2>dd nieuws</h2>
-				<article>
-					<p>nieuw</p>
-					<h3>Dunkin' Bataviastad gaat weer open!</h3>
-					<img src="" alt="">
-				</article>
-				<article>
-					<p>vegan</p>
-					<h3>Oproep aan alle vegans out there: <cite lang="en"> Donut worry, we got you covered!</cite></h3>
-					<img src="" alt="">
-				</article>
+				<h2><em>dd</em> nieuws</h2>
+				<ul>
+					<li>
+						<p>nieuw</p>
+						<h3>Dunkin' Bataviastad gaat weer open!</h3>
+						<img src="images/bataviastad_opening.png" alt="poster opening bavativastad">
+					</li>
+					<li>
+						<p>vegan</p>
+						<h3>Oproep aan alle vegans out there</h3>
+						<img src="images/vegan_donuts.jpg" alt="vegan donuts afbeelding">
+					</li>
+					<li>
+						<p>nieuw</p>
+						<h3>Dunkin' Bataviastad gaat weer open!</h3>
+						<img src="images/bataviastad_opening.png" alt="poster opening bavativastad">
+					</li>
+					<li>
+						<p>vegan</p>
+						<h3>Oproep aan alle vegans out there</h3>
+						<img src="images/vegan_donuts.jpg" alt="vegan donuts afbeelding">
+					</li>
+					<li>
+						<p>nieuw</p>
+						<h3>Dunkin' Bataviastad gaat weer open!</h3>
+						<img src="images/bataviastad_opening.png" alt="poster opening bavativastad">
+					</li>
+				</ul>
+				<button><</button>
+				<button>></button>
+				<button>alle blogs</button>
 			 </section>
 		</main>
 			<!-- DE FOOTER  -->
-		<footer>
-			<img src="images/DNKN.svg" alt="dunkin donut logo, beetje getilt">
-			
-			<section>
-				<a href="">Storefinder</a>
-				<a href="">Jobs</a>
-				<a href="">Blog</a>
-				<a href="">Over Dunkin'</a>
-			</section>
-
-			<!-- hier moeten tiktok insta en facebook linkjes in komen -->
-			<aside>
-				<a href=""> <img src="images/tiktoklogo.svg" alt=> </a> </li>
-				<a href=""> <img src="images/instagramlogo.svg" alt=> </a></li>
-				<a href=""> <img src="images/facebooklogo.svg" alt=> </a></li>
-			</aside>	
-			
-
-			<section> 
-				<a href="">22 DD IP Holder</a> 
-				<a href="">22 DD IP Holder</a> 
-				<a href="">Privacy Policy </a> 
-				<a href="">Algemene voorwaarden</a>
-				<a href="">⚡️</a>
-			</section>
-		</footer>
+			<footer>
+				<section>
+					<img src="images/DNKN.svg" alt="dunkin donut logo, beetje getilt">
+				</section>
+		
+				<section>
+					<a href="">Storefinder</a>
+					<a href="">Jobs</a>
+					<a href="">Blog</a>
+					<a href="">Over Dunkin'</a>
+				</section>
+		
+				<!-- hier moeten tiktok insta en facebook linkjes in komen -->
+				<section>
+					<a href=""> <img src="images/tiktoklogo.svg" alt="tiktoklogo" ></a> 
+					<a href=""> <img src="images/instagramlogo.svg" alt="instagramlogo"></a>
+					<a href=""> <img src="images/facebooklogo.svg" alt="facebooklogo"></a>
+				</section>
+				
+		
+				<section> 
+					<a href="">22 DD IP Holder</a> 
+					<a href="">22 DD IP Holder</a> 
+					<a href="">Privacy Policy </a> 
+					<a href="">Algemene voorwaarden</a>
+					<a href="">⚡️</a>
+				</section>
+			</footer>
 
 		<script defer src="scripts/script.js"></script>
 	</body>
