--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<header>
 			<!-- logo op de pagina-->
-			<h1>Dunkin'</h1>
+			<h1 aria-label="Welkom op de hoofdpagina van dunkin.nl">Dunkin'</h1>
 			<!-- op tweede pagina -->
 			
 			<button aria-hidden="true">
@@ -37,10 +37,10 @@
 					<img src="images/close_button.png" alt="sluitknop kruisje">
 				</button>
 				<ul>
-					<li><a href="https://www.dunkin.nl/storefinder">Storefinder</a></li>
-					<li><a href="https://werkenbijdunkin.store/">Jobs</a></li>
-					<li><a href="">Blog</a></li>
-					<li><a href="">More</a></li>
+					<li><a href="#">Storefinder</a></li>
+					<li><a href="#">Jobs</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">More</a></li>
 					<!-- <li>	
 						<details>
 							<summary>	<a href="">More</a></li> </summary>
@@ -80,9 +80,9 @@
 				<button>Afhalen</button>
 			</section>	
 
-			<!-- SECTION 3: NIEUW met plaatje van nieuwe donuts-->			
+			<!-- SECTION 3: nieuw met plaatje van nieuwe donuts-->			
 			<section>
-				<h2>nieuw!</h2>
+				<h2>Nieuw!</h2>
 				<img src="images/nieuwe_donuts.png" alt="foto van nieuwe donuts"> 
 			</section>
 
@@ -104,7 +104,7 @@
 						<h3>Ontvang je bestelling</h3>
 						<img src="images/bestelling_sign_logo.svg" alt="bestelling logo">
 					</li>
-					<button>bestel nu</button>
+					<button> bestel nu</button>
 				</ul>
 			 </section>
 
@@ -113,64 +113,64 @@
 				<h2><em>dd</em> nieuws</h2>
 				<ul>
 					<li>
-						<p>nieuw</p>
 						<h3>Dunkin' Bataviastad gaat weer open!</h3>
+						<p>nieuw</p>
 						<img src="images/bataviastad_opening.png" alt="poster opening bavativastad">
 					</li>
 					<li>
-						<p>vegan</p>
 						<h3>Oproep aan alle vegans out there</h3>
+						<p>vegan</p>
 						<img src="images/vegan_donuts.jpg" alt="vegan donuts afbeelding">
 					</li>
 					<li>
-						<p>nieuw</p>
 						<h3>Dunkin' Bataviastad gaat weer open!</h3>
+						<p>nieuw</p>
 						<img src="images/bataviastad_opening.png" alt="poster opening bavativastad">
 					</li>
 					<li>
-						<p>vegan</p>
 						<h3>Oproep aan alle vegans out there</h3>
+						<p>vegan</p>
 						<img src="images/vegan_donuts.jpg" alt="vegan donuts afbeelding">
 					</li>
 					<li>
-						<p>nieuw</p>
 						<h3>Dunkin' Bataviastad gaat weer open!</h3>
+						<p>nieuw</p>
 						<img src="images/bataviastad_opening.png" alt="poster opening bavativastad">
 					</li>
 				</ul>
-				<button><</button>
-				<button>></button>
-				<button>alle blogs</button>
+				<button> < </button>
+				<button> > </button>
+				<button> alle blogs </button>
 			 </section>
 		</main>
 			<!-- DE FOOTER  -->
 			<footer>
-				<section>
+				<!-- <section> -->
 					<img src="images/DNKN.svg" alt="dunkin donut logo, beetje getilt">
-				</section>
+				<!-- </section> -->
 		
-				<section>
-					<a href="">Storefinder</a>
-					<a href="">Jobs</a>
-					<a href="">Blog</a>
-					<a href="">Over Dunkin'</a>
-				</section>
+				<nav>
+					<a href="#">Storefinder</a>
+					<a href="#">Jobs</a>
+					<a href="#">Blog</a>
+					<a href="#">Over Dunkin'</a>
+				</nav>
 		
 				<!-- hier moeten tiktok insta en facebook linkjes in komen -->
-				<section>
-					<a href=""> <img src="images/tiktoklogo.svg" alt="tiktoklogo" ></a> 
-					<a href=""> <img src="images/instagramlogo.svg" alt="instagramlogo"></a>
-					<a href=""> <img src="images/facebooklogo.svg" alt="facebooklogo"></a>
-				</section>
+				<nav>
+					<a href="#"> <img src="images/tiktoklogo.svg" alt="tiktoklogo" ></a> 
+					<a href="#"> <img src="images/instagramlogo.svg" alt="instagramlogo"></a>
+					<a href="#"> <img src="images/facebooklogo.svg" alt="facebooklogo"></a>
+				</nav>
 				
 		
-				<section> 
-					<a href="">22 DD IP Holder</a> 
-					<a href="">22 DD IP Holder</a> 
-					<a href="">Privacy Policy </a> 
-					<a href="">Algemene voorwaarden</a>
-					<a href="">⚡️</a>
-				</section>
+				<nav> 
+					<a href="#">22 DD IP Holder</a> 
+					<a href="#">22 DD IP Holder</a> 
+					<a href="#">Privacy Policy </a> 
+					<a href="#">Algemene voorwaarden</a>
+					<a href="#"> by Foodticket</a>
+				</nav>
 			</footer>
 
 		<script defer src="scripts/script.js"></script>
