--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
             <a href="#">22 DD IP Holder</a> 
             <a href="#">Privacy Policy </a> 
             <a href="#">Algemene voorwaarden</a>
-            <a href="#">⚡️</a>
+            <a href="#">⚡️ by Foodticket</a>
         </nav>
     </footer>
 
