--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					<a href="#">22 DD IP Holder</a> 
 					<a href="#">Privacy Policy </a> 
 					<a href="#">Algemene voorwaarden</a>
-					<a href="#"> by Foodticket</a>
+					<a href="#"> ⚡️ by Foodticket</a>
 				</nav>
 			</footer>
 
